--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -5,6 +5,9 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: Roboto, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 img {
@@ -24,4 +27,42 @@ input {
   padding: 8px 24px;
   width: 400px;
   margin-bottom: 16px;
+}
+
+ul{
+  list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 20px;
+}
+
+ul a{
+  text-decoration: none;
+  margin-right: 10px;
+  color: #666;
+}
+
+.header{
+  display: flex;
+  justify-content: space-between;
+}
+
+.content{
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 16px;
+
+}
+
+button {
+  padding: 8px 16px;
+}
+
+.footer{
+  background-color: #eee;
+  display: flex;
+  justify-content: space-between;
 }
